[package]
name = "sorensen"
version = "0.1.3"
authors = ["Ponyloop <anlaakso@protonmail.com>"]
edition = "2018"
description = "Sørensen–Dice coefficient implementation for Rust."
repository = "https://github.com/ponyloop/sorensen"
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[dependencies]
hashbrown = "0.1.8"
assert_float_eq = "1.1.3"

[dev-dependencies]
rand = "0.6.5"
criterion = "0.2"

[[bench]]
name = "benches"
harness = false
