[package]
name = "sorensen"
version = "0.1.3"
authors = ["Ponyloop <anlaakso@protonmail.com>"]
edition = "2018"
description = "Sørensen–Dice coefficient implementation for Rust."
repository = "https://github.com/ponyloop/sorensen"
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[dependencies]
hashbrown = "0.12.3"
assert_float_eq = "1.1.3"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
